--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,8 @@
         transition: 1s ease;
         font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
           sans-serif;
+        scroll-behavior: smooth;
+
       }
       body {
         scroll-behavior: smooth;
